# Ebay-API-market-search-query-tracker

./: .env.example  .gitignore  DEPLOYMENT_FIX_REPORT.md  DEPLOYMENT_STATUS.md  README.md  SETTINGS_FIX_VERIFICATION.md  SETTINGS_PERSISTENCE_FIX.md  VERIFY_DEPLOYMENT.md  VERIFY_FIX_NOW.md  clear_data.bat  docker-compose.yml  start.bat
backend/: Dockerfile  alembic.ini  config.toml  pyproject.toml
backend/app/: __init__.py  config.py  database.py  logging_setup.py  main.py  scheduler.py
backend/app/models/: __init__.py  listing.py  query.py  settings.py  snapshot.py  sold.py
backend/app/routers/: __init__.py  auth.py  config_router.py  listings.py  logs_router.py  queries.py  scheduler.py  snapshots.py  sold.py  stats.py
backend/app/schemas/: __init__.py  listing.py  query.py  sold.py  stats.py
backend/app/services/: __init__.py  dedup.py  ebay_finding.py  ebay_sites.py  ebay_taxonomy.py  poll_runner.py  sold_scraper.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_price_range.py  0003_add_app_settings.py  0004_add_sold_source_column.py
backend/tests/: conftest.py
backend/tests/edge_cases/: test_edge_cases.py
backend/tests/fixtures/: browse_empty.json  browse_page1.json  browse_page2.json  browse_single_page.json  finding_empty.xml  finding_failure_ack.xml  finding_page1.xml  finding_page2.xml  finding_single_page.xml  real_finding_response.xml  sold_page.html  sold_page_with_next.html
backend/tests/integration/: test_config_api.py  test_health.py  test_queries_api.py  test_scheduler_api.py  (+1 more)
(+129 files in other folders)
