[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ebay-market-intel"
version = "0.1.0"
description = "Self-hosted eBay market intelligence platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "pydantic==2.11.3",
    "pydantic-settings==2.9.1",
    "httpx==0.28.1",
    "beautifulsoup4==4.13.3",
    "lxml==5.3.1",
    "loguru==0.7.3",
    "apscheduler==4.0.0a5",
    "tomllib; python_version < '3.11'",
    "python-multipart==0.0.20",
    "anyio==4.9.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.1.0",
    "httpx==0.28.1",
    "pytest-mock==3.14.0",
    "aiosqlite==0.21.0",
    "greenlet==3.1.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["app"]
